fixed input field flowing out of container when compressed

--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -7,6 +7,7 @@
   margin-top: 5px;
   color: $text-solid-color;
   height: 2em;
+  overflow-x: hidden;
 
   select {
     width: 40%;
